It actually works now although there are probably still some bugs in there.

--- a/WEB2630/as02/vue-cli/index.html
+++ b/WEB2630/as02/vue-cli/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>vue-cli</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css">
+    <title>Rock Paper Scissors</title>
+
   </head>
   <body>
     <div id="app"></div>
